Fix styles overlaping

--- a/src/client/components/MenuAccount/MenuAccount.less
+++ b/src/client/components/MenuAccount/MenuAccount.less
@@ -52,47 +52,47 @@
 
 .oc-menu-account__action-button:focus:before,
 .oc-menu-account__action-button:hover:before {
-  content: none;
+  content: none !important;
 }
 
 .oc-menu-account__action-button:focus:before {
-  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.36);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.36) !important;
 }
 
 .oc-menu-account__action-button:focus:before,
 .oc-menu-account__action-button:hover:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.04);
+  content: '' !important;
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  right: 0 !important;
+  bottom: 0 !important;
+  background-color: rgba(0, 0, 0, 0.04) !important;
 }
 
 .oc-menu-account__bottom-row {
-  border-top: 1px solid rgba(0, 0, 0, 0.15);
-  padding: 8px 12px 12px;
+  border-top: 1px solid rgba(0, 0, 0, 0.15) !important;
+  padding: 8px 12px 12px !important;
 }
 
 .oc-menu-account__select-item {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 8px;
-  font-size: 14px;
-  min-height: 28px;
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+  margin-bottom: 8px !important;
+  font-size: 14px !important;
+  min-height: 28px !important;
 
   &:last-child {
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
   }
 }
 
 .oc-menu-account__select-item-label {
-  margin-right: 8px;
-  font-weight: bold;
+  margin-right: 8px !important;
+  font-weight: bold !important;
 }
 
 .oc-menu-account__select-item-select {
-  margin-left: auto;
+  margin-left: auto !important;
 }
